Fixed sizing issue when tile is flipped to visible.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -940,6 +940,11 @@ section {
         width: 83px;
         height: 83px;
     }
+
+    .col div {
+        width: 83px;
+        height: 83px;
+    }
     
     .front {
         width: 100%;
